# FINA

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
lib/common/: Cargo.toml
lib/common/src/: ark_trace.rs  error.rs  lib.rs  macros.rs  rng.rs
lib/common/src/io/: cursor.rs  error.rs  mod.rs  read.rs  write.rs
lib/common/src/iterable/: mod.rs  rev.rs
lib/primitives/: Cargo.toml
lib/primitives/src/: bits.rs  lib.rs
lib/primitives/src/arithmetic/: bigint.rs  limb.rs  macros.rs  mod.rs  uint.rs
lib/primitives/src/common/: bits.rs  macros.rs
lib/primitives/src/curve/: macros.rs  mod.rs  traits.rs
lib/primitives/src/curve/sw/: affine.rs  mod.rs  projective.rs
lib/primitives/src/curve/traits/: affine.rs  curve.rs  group.rs
lib/primitives/src/field/: fp.rs  macros.rs  mod.rs  traits.rs  vec.rs
lib/primitives/src/field/traits/: field.rs  group.rs  prime.rs
lib/primitives/src/polynomial/: domain.rs  evaluations.rs  mod.rs  traits.rs  univariate.rs
lib/primitives/src/polynomial/domain/: evaluation.rs  general.rs  mixed_radix.rs
lib/primitives/src/polynomial/domain/radix2/: fft.rs  mod.rs
lib/primitives/src/polynomial/evaluations/: univariate.rs
lib/primitives/src/polynomial/univariate/: dense.rs  sparse.rs
lib/serialize/: Cargo.toml
lib/serialize/src/: error.rs  impls.rs  lib.rs  macros.rs  marshall.rs  serde.rs  traits.rs
lib/serialize/src/impls/: biguint.rs  bool.rs  btree.rs  generic.rs  isize.rs  list.rs  option.rs  phantom.rs  str.rs  usize.rs  vec.rs
lib/serialize/src/traits/: deserialize.rs  flags.rs  serialize.rs
