[workspace]

members = [
"lib/primitives",
"lib/serialize",
"lib/common"
]

resolver = "2"

[workspace.package]
version = "1.0.0-beta.1"
authors = ["Vomer <tarasworonjanski@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xVomer/FINA/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
fina-primitives = { path = "lib/primitives" }
fina-serialize = { path = "lib/serialize" }
fina-common = { path = "lib/common" }
zeroize = { version = "1.8.1", features = ["derive"] }
num-traits = { version = "0.2.14", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1", default-features = false }
educe = "0.6.0"
proptest = "1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde-encoded-bytes = "0.2.1"
serde_with = { version = "3.12", default-features = false }
digest = { version = "0.10.7", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
