[package]
name = "fina-common"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[lints]
workspace = true


[dependencies]
num-traits.workspace = true
rand = { version = "0.9.1", default-features = false, features = ["std_rng"]}
colored = { version = "3.0.0" }

[dev-dependencies]
rand = { version = "0.9.1", features = ["std"]}
proptest.workspace = true
