[package]
name = "fina-primitives"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
zeroize.workspace = true
num-traits.workspace = true
educe.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
