[package]
name = "fina-serialize"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
serde = { workspace = true}
serde-encoded-bytes = { workspace = true, features = ["base64"] }
serde_with = { workspace = true,  default-features = false }
fina-common.workspace = true
digest.workspace = true
arrayvec.workspace = true
num-bigint.workspace = true

[dev-dependencies]
serde_json.workspace = true
